--- a/ShouldReadMe/public/css/launch.css
+++ b/ShouldReadMe/public/css/launch.css
@@ -40,7 +40,6 @@
 	overflow:hidden;
 	padding-top:50px;
 	background: url("/images/dark_texture.png") repeat 0% 0% #1c1c1c;
-	color : lightgray;
 }
 
 .cover{
@@ -55,6 +54,23 @@
 .btn-default{
 	min-width:100px;
 	margin:10px 50px;
+}
+
+.carousel-bkg{
+	width:100%;
+	height:500px!important;
+	background-color:red;
+	display:block;
+}
+
+.transparent{
+	opacity: 0.4;
+    filter: alpha(opacity=40); /* For IE8 and earlier */
+}
+
+#logInModal .form-group{
+	padding-left: 50px;
+	padding-right: 50px;	
 }
 
 /*footer style*/
