--- a/ShouldReadMe/views/launch.tt
+++ b/ShouldReadMe/views/launch.tt
@@ -1,58 +1,207 @@
-    <!-- <img class="cover2" src="cover2.jpg"> -->
-    <img class="cover" src="/images/finalcover.jpg">
-    <!-- <img class="cover" src="cover.jpg"> -->
-    <nav class="main-menu navbar navbar-inverse" role="navigation">
-        <div class="container-fluid">
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <img class="small-logo" src="/images/ourlogopng.png">
-                <ul class="main-menu-list nav navbar-nav">
-                    <li><a href="#"> Sign in </a></li>
-                    <li><a href="#"> Get started </a></li>
-                    <li><a href="#"> Coming soon </a></li>
-                    <li><a href="#"><img class="help-icon" src="/images/help.png"></a></li>
-                </ul>
+<!-- <img class="cover2" src="cover2.jpg"> -->
+<img class="cover" src="/images/finalcover.jpg">
+<!-- <img class="cover" src="cover.jpg"> -->
+<nav class="main-menu navbar navbar-inverse" role="navigation">
+    <div class="container-fluid">
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <img class="small-logo" src="/images/ourlogopng.png">
+            <ul class="main-menu-list nav navbar-nav">
+                <li><a href="#coming-soon"> Sign in </a></li>
+                <li><a href="#"> Get started </a></li>
+                <li><a href="#coming-soon"> Coming soon </a></li>
+                <li><a href="#"><img class="help-icon" src="/images/help.png"></a></li>
+            </ul>
+        </div>
+    </div>
+</nav> <!-- END  menu section -->
+
+
+
+<!-- container section -->
+<div class="main-container container-fluid">
+    <!-- find user opinion section -->
+    <div class="text-center">
+        <h2>Do you ever read Terms & Conditions?</h2>
+        <div class="row">
+            <button type="button" class="yes-btn btn btn-lg btn-default">Yes</button>
+            <button type="button" class="no-btn btn btn-lg btn-default">No</button>
+        </div>
+    </div><!--  END find user opinion section -->
+    <!-- YES section -->
+    <div class="yes-answer hide">
+        <h2>Lorem ipsum yeeeess</h2>
+        <p>explicatii: boring long and stuff</p>
+    </div> <!-- END YES section -->
+
+    <!-- NO section -->
+    <div class="no-answer hide">
+        <h2>Lorem ipsum nooo</h2>
+        <p>explicatii: boring  long and stuff</p>
+    </div> <!-- END NO section -->
+    <!-- our solution -->
+    <div class="our-solution">
+        Lorem ipsum....    
+    </div><!-- END our solution -->
+    <!-- get started section -->
+    <div class="get-started">
+        <h2>Let`s get started!</h2>
+        <div class="row">
+            <button type="button" class="signup-btn btn btn-lg btn-default" data-toggle="modal" data-target="#signUpModal">Sign up</button>
+            <button type="button" class="login-btn btn btn-lg btn-default" data-toggle="modal" data-target="#logInModal">Log in</button>
+        </div>
+    </div>
+    <!-- sign up modal -->
+    <div id="signUpModal" class="modal fade">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <!-- <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Cancel</span></button> -->
+            <h4 class="modal-title">Sign up</h4>
+          </div>
+          <div class="modal-body">
+            <form role="form">
+                <div class="row">
+                    <div class="col-xs-6 col-sm-6 col-md-6">
+                        <div class="form-group">
+                            <input type="text" name="first_name" id="first_name" class="form-control input-sm" placeholder="First Name">
+                        </div>
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-6">
+                        <div class="form-group">
+                            <input type="text" name="last_name" id="last_name" class="form-control input-sm" placeholder="Last Name">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xs-6 col-sm-6 col-md-6">
+                        <div class="form-group">
+                            <input type="email" name="email" id="email" class="form-control input-sm" placeholder="Email Address">
+                        </div>
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-6">
+                        <div class="form-group">
+                            <input type="text" name="website" id="website" class="form-control input-sm" placeholder="Website">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xs-6 col-sm-6 col-md-6">
+                        <div class="form-group">
+                            <input type="password" name="password" id="password" class="form-control input-sm" placeholder="Password">
+                        </div>
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-6">
+                        <div class="form-group">
+                            <input type="password" name="password_confirmation" id="password_confirmation" class="form-control input-sm" placeholder="Confirm Password">
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-info">Sign up</button>
+                </div>
+            </form>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!--END sign up modal -->
+    
+    <!-- log in modal -->
+    <div id="logInModal" class="modal fade">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+<!--                     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Cancel</span></button> -->
+            <h4 class="modal-title">Log in</h4>
+          </div>
+          <div class="modal-body">
+            <form role="form">
+                <div class="form-group">
+                    <input type="email" name="email" id="email" class="form-control input-sm" placeholder="Email Address">
+                </div>
+                <div class="form-group">
+                    <input type="password" name="password" id="password" class="form-control input-sm" placeholder="Password">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-info">Log in</button>
+                </div>
+            </form>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!--END log in modal -->
+    <!-- END get started -->
+    <!-- coming soon section -->
+    <div class="coming-soon">
+        <a class="linker" name="coming-soon"></a>
+        <h2>Coming Soon</h2>
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+          </ol>
+
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <img class="carousel-bkg transparent" src="" alt=".">
+              <div class="carousel-caption">
+                    Lorem Ipsum 1
+              </div>
             </div>
-        </div>
-    </nav> <!-- END  menu section -->
-
-
-
-    <!-- container section -->
-    <div class="main-container container-fluid">
-        <!-- find user opinion section -->
-        <div class="text-center">
-            <h2>Do you ever read Terms & Conditions?</h2>
-            <div class="row">
-                <button type="button" class="btn btn-lg btn-default">Yes</button>
-                <button type="button" class="btn btn-lg btn-default">No</button>
+            <div class="item">
+              <img class="carousel-bkg transparent" src="" alt=".">
+              <div class="carousel-caption">
+                Lorem Ipsum 2
+              </div>
             </div>
-        </div><!--  END find user opinion section -->
-        <!-- YES section -->
-        <div class="hide">
-            <h2>Lorem ipsum</h2>
-            <p>explicatii: boring long and stuff</p>
-        </div> <!-- END YES section -->
+            <div class="item">
+              <img class="carousel-bkg transparent" src="" alt=".">
+              <div class="carousel-caption">
+                Lorem Ipsum 3
+              </div>
+            </div>
+          </div>
 
-        <!-- NO section -->
-        <div class="hide">
-            <h2>Lorem ipsum</h2>
-            <p>explicatii: boring  long and stuff</p>
-        </div> <!-- END NO section -->
-    </div> <!-- END container section -->
+          <!-- Controls -->
+          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+    </div><!-- END coming soon section -->
+    <!-- contact us section -->
+    <div class="contact-us text-center">
+        <h2>Contact us</h2>
+        <a href="https://github.com/koding/global.hackathon/blob/master/Teams/VamPerl/ABOUT.md">VamPerl</a>
+        <p>vamperl@gmail.com</p>
+    </div><!-- END contact us section -->
+</div> <!-- END container section -->
 
-    <!-- footer section -->
-    <div class="main-footer text-center container-fluid">
-        <div class="text-section social">
-            <a href="#"> Terms & Conditions </a>
-            <a href="#"> Privacy Policy </a>
-        </div>
-        <div class="icons-section">
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
-        </div>
-        <div class="koding-section">
-            <p>This project was started at the hackathon organised by <a href="http://www.koding.com">koding.com</a></p>
-        </div>
-    </div><!-- END footer section -->
+
+<!-- footer section -->
+<div class="main-footer text-center container-fluid">
+    <div class="text-section social">
+        <a href="#"> Terms & Conditions </a>
+        <a href="#"> Privacy Policy </a>
+    </div>
+    <div class="icons-section">
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+    </div>
+    <div class="koding-section">
+        <p>This project was started at the hackathon organised by <a href="http://www.koding.com">koding.com</a></p>
+    </div>
+</div><!-- END footer section -->
