--- a/ShouldReadMe/public/css/style.css
+++ b/ShouldReadMe/public/css/style.css
@@ -1,189 +1,167 @@
 
-body {
-margin: 0;
-margin-bottom: 25px;
-padding: 0;
-background-color: #ddd;
-background-image: url("/images/perldancer-bg.jpg");
-background-repeat: no-repeat;
-background-position: top left;
-
-font-family: "Lucida Grande", "Bitstream Vera Sans", "Verdana";
-font-size: 13px;
-color: #333;
+/*header style*/
+.main-menu, .menu{
+	top:300px;
+	border:none;
+	height:65px;
+	background-color: black;
+	font-family: "Franklin Gothic Medium","Franklin Gothic","ITC Franklin Gothic",Arial,sans-serif;
+	font-size:25px;
+	padding-top:5px;
 }
 
-h1 {
-font-size: 28px;
-color: #000;
+.menu{
+	top:0;
 }
 
-a  {color: #03c}
-a:hover {
-background-color: #03c;
-color: white;
-text-decoration: none;
+.navbar-fixed-top{
+	top:0px;
 }
 
-#page {
-background-color: #ddd;
-width: 750px;
-margin: auto;
-margin-left: auto;
-padding-left: 0px;
-margin-right: auto;
+.navbar{
+	border-radius: 0px;
 }
 
-#content {
-background-color: white;
-border: 3px solid #aaa;
-border-top: none;
-padding: 25px;
-width: 500px;
+.main-menu-list{
+	float:right;
 }
 
-#sidebar {
-float: right;
-width: 175px;
+.small-logo{
+	float:left;
+	zoom: 0.5;
+	margin-top: -20px;
 }
 
-#header, #about, #getting-started {
-padding-left: 75px;
-padding-right: 30px;
+.help-icon{
+	width: 33px;
+	margin-top: -5px;
+}
+
+/*container style*/
+.main-container{
+	margin-top: 300px;
+	height:auto;
+	overflow:hidden;
+	padding-top:50px;
+	background: url("/image/dark_texture.png") repeat 0% 0% #1c1c1c;
+	color: lightgray;
+}
+
+.cover{
+	min-width:100%;
+	min-height: 300px;
+	position:absolute;
+	top:-435px;
+	z-index: -1;
+	left:0;
+}
+
+.btn-default{
+	min-width:100px;
+	margin:10px 50px;
+}
+
+.carousel-bkg{
+	width:100%;
+	height:500px!important;
+	background-color:red;
+	display:block;
+}
+
+.transparent{
+	opacity: 0.4;
+    filter: alpha(opacity=40); /* For IE8 and earlier */
+}
+
+#logInModal .form-group{
+	padding-left: 50px;
+	padding-right: 50px;	
+}
+
+/*editor page*/
+.editor-container{
+	margin-top:80px;
+	padding:0 50px;
+}
+
+.disabled, .disabled:hover, .disabled:active, .disabled:focus{
+	color:lightgray;
+}
+
+.details-option{
+	border-left: 1px solid green;
+	border-right: 1px solid green;
+}
+
+h3{
+	margin-top:0;
+}
+
+.starting-options{
+	margin-top:35px;
+}
+
+.linked{
+	margin-top:70px;
+}
+
+.not-implemented{
+	font-style:italic;
+	padding:50px;
+	color: gray;
+}
+
+.customization-section{
+	background-color: pink;
+	height:30px;
+}
+
+.default-icon{
+	width:60px;
+	height:60px;
+	float: left;
+	padding:5px;
+}
+
+.preview-section{
+	background-color: blue;
+}
+
+.tips-section{
+	background-color: pink;
+}
+/*footer style*/
+.main-footer {
+	background-color:black;
+	text-align:center;
+	padding: 50px 0;
+	color:#FFFFFF;
+	display:block;
+}
+
+.fa {
+	font-size:20px;	
+}
+
+.icons-section {
+}
+
+/*colors*/
+
+.color-white{
+	color:white;
+}
+
+.color-black{
+	color:black;
+}
+
+.color-grey{
+	color: #333;
+}
+
+.color-lightgray{
+	color:lightgray;
 }
 
 
-#header {
-background-image: url("/images/perldancer.jpg");
-background-repeat: no-repeat;
-background-position: top left;
-height: 64px;
-}
-#header h1, #header h2 {margin: 0}
-#header h2 {
-color: #888;
-font-weight: normal;
-font-size: 16px;
-}
-
-#about h3 {
-margin: 0;
-margin-bottom: 10px;
-font-size: 14px;
-}
-
-#about-content {
-background-color: #ffd;
-border: 1px solid #fc0;
-margin-left: -11px;
-}
-#about-content table {
-margin-top: 10px;
-margin-bottom: 10px;
-font-size: 11px;
-border-collapse: collapse;
-}
-#about-content td {
-padding: 10px;
-padding-top: 3px;
-padding-bottom: 3px;
-}
-#about-content td.name  {color: #555}
-#about-content td.value {color: #000}
-
-#about-content.failure {
-background-color: #fcc;
-border: 1px solid #f00;
-}
-#about-content.failure p {
-margin: 0;
-padding: 10px;
-}
-
-#getting-started {
-border-top: 1px solid #ccc;
-margin-top: 25px;
-padding-top: 15px;
-}
-#getting-started h1 {
-margin: 0;
-font-size: 20px;
-}
-#getting-started h2 {
-margin: 0;
-font-size: 14px;
-font-weight: normal;
-color: #333;
-margin-bottom: 25px;
-}
-#getting-started ol {
-margin-left: 0;
-padding-left: 0;
-}
-#getting-started li {
-font-size: 18px;
-color: #888;
-margin-bottom: 25px;
-}
-#getting-started li h2 {
-margin: 0;
-font-weight: normal;
-font-size: 18px;
-color: #333;
-}
-#getting-started li p {
-color: #555;
-font-size: 13px;
-}
-
-#search {
-margin: 0;
-padding-top: 10px;
-padding-bottom: 10px;
-font-size: 11px;
-}
-#search input {
-font-size: 11px;
-margin: 2px;
-}
-#search-text {width: 170px}
-
-#sidebar ul {
-margin-left: 0;
-padding-left: 0;
-}
-#sidebar ul h3 {
-margin-top: 25px;
-font-size: 16px;
-padding-bottom: 10px;
-border-bottom: 1px solid #ccc;
-}
-#sidebar li {
-list-style-type: none;
-}
-#sidebar ul.links li {
-margin-bottom: 5px;
-}
-
-h1, h2, h3, h4, h5 {
-font-family: sans-serif;
-margin: 1.2em 0 0.6em 0;
-}
-
-p {
-line-height: 1.5em;
-margin: 1.6em 0;
-}
-
-code, tt {
-    font-family: 'Andale Mono', Monaco, 'Liberation Mono', 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', monospace;
-}
-
-#footer {
-clear: both;
-padding-top: 2em;
-text-align: center;
-padding-right: 160px;
-font-family: sans-serif;
-font-size: 10px;
-}
