authentication basically working

--- a/ShouldReadMe/views/launch.tt
+++ b/ShouldReadMe/views/launch.tt
@@ -119,7 +119,7 @@
             <h4 class="modal-title">Log in</h4>
           </div>
           <div class="modal-body">
-            <form role="form">
+            <form role="form" action="/login" method="POST">
                 <div class="form-group">
                     <input type="email" name="email" id="email" class="form-control input-sm" placeholder="Email Address">
                 </div>
