--- a/ShouldReadMe/views/get_started.tt
+++ b/ShouldReadMe/views/get_started.tt
@@ -1,50 +1,13 @@
-<!DOCTYPE html>
-<html>
-    <head>
-            <title>ShoulReadMe</title>
-            <meta charset="utf-8">
-            <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-            <link rel="stylesheet" href="dist/css/bootstrap.min.css">
-            <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-            <link rel="stylesheet" href="main.css">
-            <script type="text/javascript" src="jquery-2.1.1.js"></script>
-            <script type="text/javascript" src="dist/js/bootstrap.min.js"></script>
-            <script type="text/javascript" src="mainjs.js"></script>
-            <script>
-                $("document").ready(function($){
-                    $(".disabled").click(function(event){
-                      event.preventDefault();
-                    });
-
-                    $(".submit-option.active").click(function(){
-                        // var $href = $(this).attr("href").substring(1);
-                        // $(".starting-methods p").toggleClass("hide");
-                        // $("."+$href).toggleClass("hide");
-                        // $(".open-options").toggleClass("hide");
-                        $(".details").toggleClass("hide");
-                        $(".starting-methods p").toggleClass("hide");
-                        $(".open-options").toggleClass("hide");
-                    });
-
-                    $(".open-options").click(function(){
-                        $(this).toggleClass("hide");
-                        $(".starting-methods p").toggleClass("hide");
-                        $(".details").toggleClass("hide");
-                    });
-                });
-            </script>
-    </head>
-    <body>
-        <nav class="menu navbar-fixed-top navbar navbar-inverse" role="navigation">
+<nav class="menu navbar-fixed-top navbar navbar-inverse" role="navigation">
             <div class="container-fluid">
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <img class="small-logo" src="ourlogopng.png">
+                    <img class="small-logo" src="/images/ourlogopng.png">
                     <ul class="main-menu-list nav navbar-nav">
                         <li><a href="#coming-soon"> Sign in </a></li>
                         <li><a href="#"> Get started </a></li>
                         <li><a href="#coming-soon"> Coming soon </a></li>
-                        <li><a href="#"><img class="help-icon" src="help.png"></a></li>
+                        <li><a href="#"><img class="help-icon" src="/images/help.png"></a></li>
                     </ul>
                 </div>
             </div>
@@ -95,5 +58,3 @@
             </form><!-- END details section -->
 
         </div><!-- END container-->
-    </body>
-</html>
