base dashboard running whiled :D

--- a/ShouldReadMe/public/javascripts/templates/dashboard/baseDashboard.hbs
+++ b/ShouldReadMe/public/javascripts/templates/dashboard/baseDashboard.hbs
@@ -22,6 +22,19 @@
     </div><!-- END instructions -->
     <!-- grouped content -->
     <div class="grouped-content row">
-    
+        <!-- ICONS FAQ Quiz -->
+        <div class="customization-section col-md-3">
+        
+        </div><!-- END customize section-->
+        
+        <!-- preview section -->
+        <div class="preview-section col-md-6">
+                    
+        </div><!-- END preview section-->
+        
+        <!-- tips section -->
+        <div class="tips-section col-md-3">
+                
+        </div><!-- END tips section-->
     </div>
 </div>
