--- a/ShouldReadMe/public/javascripts/templates/dashboard/baseDashboard.hbs
+++ b/ShouldReadMe/public/javascripts/templates/dashboard/baseDashboard.hbs
@@ -24,7 +24,15 @@
     <div class="grouped-content row">
         <!-- ICONS FAQ Quiz -->
         <div class="customization-section col-md-3">
-        
+            <!-- icons section -->
+            <div class="icons-subsection">
+            </div><!-- END icons section-->
+            <!-- FAQ section -->
+            <div class="faq-section">
+            </div><!-- END FAQ section -->
+            <!-- quiz section -->
+            <div class="quiz-section">
+            </div><!-- END quiz section -->
         </div><!-- END customize section-->
         
         <!-- preview section -->
