--- a/ShouldReadMe/public/css/style.css
+++ b/ShouldReadMe/public/css/style.css
@@ -1,4 +1,4 @@
-rosu: #e8221c*/
+/*rosu: #e8221c*/
 /*crem: #eadfd4*/
 /*turcoaz: #30D683*/
 /*dark-grey: #333333*/
@@ -20,43 +20,6 @@ h1, h2{
 
 }
 
-.grouped-content{
-	margin-bottom: 50px;
-}
-
-.book{
-	height: 90px;
-	width:120px;
-	margin:0 auto;
-	padding-top: 30px
-}
-
-.instructions{
-	margin: 0 -15px;
-}
-
-.instructions h3{
-	color: #e8221c;
-	padding: 30px 0;
-	margin-top: 10px;
-	font-style: bold;
-	padding-left: 77px;
-}
-.instructions h3:after{
-	content: url("images/instructions1.png");
-	content: url("images/instructions2.png");
-	height: 10px;
-	width: auto;
-	zoom: 0.55;
-	position: absolute;
-	left: 55px;
-	top: 195px;
-}
-
-.instructions p{
-	padding-bottom: 20px;
-}
-
 a{
 
 }
@@ -64,15 +27,6 @@ a{
 .starting-options .col-md-4{
 	box-sizing: border-box;
 	padding:0 30px;	
-}
-
-.col-md-3, .col-md-6{
-	padding:0;
-	margin:0;
-}
-
-.editor-container h2{
-	color:#333;
 }
 
 /*header style*/
@@ -207,72 +161,22 @@ h3{
 	border-radius:50%;
 }
 
-.icon-container:hover,
-.icon-container:active,
-.icon-container:focus{
-	background-color: #e8221c;
-	opacity: 0.9;
-	filter: alpha(opacity=90);
-}
-
-.icon-container.active{
-	background-color: #e8221c;
-	opacity: 1;
-	filter: alpha(opacity=100);
-}
-
-.icons-content{
-	padding-left:15px;
-	padding-right:15px;
-}
-
-.preview-container{
-	padding: 0 15px;
-}
-
 .preview-section,
 .icons-subsection,
 .faq-section,
 .quiz-section,
 .tips-section{
-	border: 1px solid lightgray;
-	-moz-box-shadow:    1px 1px 2px 3px #ccc;
-    -webkit-box-shadow: 1px 1px 2px 3px #ccc;
-    box-shadow: 1px 1px 2px 3px #ccc;
-	box-sizing: border-box;
-}
-/*rosu: #e8221c*/
-/*crem: #eadfd4*/
-/*turcoaz: #30D683*/
-/*dark-grey: #333333*/
-.preview-section h3,
-.icons-subsection h3,
-.faq-head,
-.quiz-head,
-.tips-section h3{
-	color:#eadfd4;
-	background-color: #333;
-	height:50px;
-	padding:10px;
-}
-
-.tips-section{
-	width: 90%;
-	float:right;
+	border: 1px solid gray;
 }
 
 .preview-icon{
-	/*width:70px;
+	width:70px;
 	height:70px;
-	margin:3px;	*/
-	width: 60px;
-	height: 60px;
-	margin: 10px;
+	margin:3px;	
 }
 
 .preview-icon-border{
-	/*border: 1px solid gray;*/
-	border: 3px solid gray;
+	border: 1px solid gray;
 	width:80px;
 	height:80px;
 	float: left;
@@ -333,7 +237,7 @@ h3{
 .icons-subsection{
 	display: block;
 	overflow: hidden;
-	width: 90%;
+	width: 100%;
 }
 
 .toggle{
@@ -347,25 +251,18 @@ h3{
 }
 
 .faq-section, .quiz-section{
-	margin-top:20px;
-	width:90%;
+	margin-top:50px;
 }
 
 .faq-head, .quiz-head{
-	display:block;
-	margin:0;
+	display:inline;
 	width:100%;
-	padding-top:13px;
 }
 
 .faq-head h4, .quiz-head h4{
 	float:left;
 	display:inline;
 	margin:0;
-}
-
-.faq-content, .quiz-content{
-	padding: 15px;
 }
 
 .tips-content{
@@ -409,3 +306,7 @@ h3{
 	/*background-color: #0099FF;*/
 background-color: #3EA2E6;
 }
+/*rosu: #e8221c*/
+/*crem: #eadfd4*/
+/*turcoaz: #30D683*/
+/*dark-grey: #333333*/
