--- a/ShouldReadMe/public/css/style.css
+++ b/ShouldReadMe/public/css/style.css
@@ -43,8 +43,8 @@ h1, h2{
 	padding-left: 77px;
 }
 .instructions h3:after{
-	content: url("images/instructions1.png");
-	content: url("images/instructions2.png");
+	content: url("/images/instructions1.png");
+	content: url("/images/instructions2.png");
 	height: 10px;
 	width: auto;
 	zoom: 0.55;
