added tips and edit panel

--- a/ShouldReadMe/public/javascripts/templates/dashboard/baseDashboard.hbs
+++ b/ShouldReadMe/public/javascripts/templates/dashboard/baseDashboard.hbs
@@ -29,6 +29,7 @@
             </div><!-- END icons section-->
             <!-- FAQ section -->
             <div class="faq-section">
+            
             </div><!-- END FAQ section -->
             <!-- quiz section -->
             <div class="quiz-section">
@@ -41,8 +42,8 @@
         </div><!-- END preview section-->
         
         <!-- tips section -->
-        <div class="tips-section col-md-3">
-                
+        <div class="col-md-3">
+            <div class="tips-section"> </div>
         </div><!-- END tips section-->
     </div>
 </div>
