--- a/ShouldReadMe/public/javascripts/templates/dashboard/icons.hbs
+++ b/ShouldReadMe/public/javascripts/templates/dashboard/icons.hbs
@@ -1,6 +1,6 @@
 <h3>Icons</h3>
 {{#each sidebarIcons}}
     <div class="icon-container">
-        <img src="{{file_name}}" class="default-icon" id="{{icon_id}}" title="{{title}}">
+        <img src="{{file_name}}" class="default-icon" id="{{id}}" title="{{title}}">
     </div>
 {{/each}}
