added styling on FAQ

--- a/ShouldReadMe/public/javascripts/templates/dashboard/faqs.hbs
+++ b/ShouldReadMe/public/javascripts/templates/dashboard/faqs.hbs
@@ -1,4 +1,6 @@
-<h3>Frequently Asked Questions</h3>
+<div class="faq-head row">
+    <h3>Frequently Asked Questions</h3>
+</div>
 
     <div class="faq-container">
         test???
