added classes for other panel in preview container

--- a/ShouldReadMe/public/javascripts/templates/dashboard/baseDashboard.hbs
+++ b/ShouldReadMe/public/javascripts/templates/dashboard/baseDashboard.hbs
@@ -38,7 +38,9 @@
         
         <!-- preview section -->
         <div class="preview-section col-md-6">
-                    
+            <div class="edit-panel"> </div>
+            <div class="faq-panel"> </div>
+            <div class="quiz-panel"> </div>
         </div><!-- END preview section-->
         
         <!-- tips section -->
