--- a/ShouldReadMe/public/javascripts/templates/dashboard/faqs.hbs
+++ b/ShouldReadMe/public/javascripts/templates/dashboard/faqs.hbs
@@ -1,7 +1,8 @@
 <div class="faq-head row">
-    <h3>Frequently Asked Questions</h3>
+    <h3>FAQ</h3>
+    <div class="toggle on toggle-light faq-toggle"></div>
 </div>
 
-    <div class="faq-container">
-        test???
-    </div>
+<div class="faq-container hide">
+    test???
+</div>
