added printable item

--- a/ShouldReadMe/public/javascripts/templates/dashboard/editPanelComponents/printItem.hbs
+++ b/ShouldReadMe/public/javascripts/templates/dashboard/editPanelComponents/printItem.hbs
@@ -1,7 +1,14 @@
 <!-- example -->
 <div class="preview-item" id="{{id}}">
+    <div class="icon-colors">
+        <ul>
+            <li class="white-bgk" id="white"></li>
+            <li class="red-bkg" id="#e8221c"></li>
+            <li class="green-bkg" id="#59AC59"></li>
+            <li class="blue-bkg" id="#65B5EB"></li>
+        </ul>
+    </div>
     <div class="preview-icon-border"><img src="{{file_name}}" class="preview-icon">
-    
     </div>
     <input type="text" name="user_defined_descr" placeholder="Short description">
 </div><!-- END example -->
