--- a/ShouldReadMe/public/javascripts/templates/dashboard/faqs.hbs
+++ b/ShouldReadMe/public/javascripts/templates/dashboard/faqs.hbs
@@ -4,5 +4,5 @@
 </div>
 
 <div class="faq-container hide">
-    test???
+    <p>Only default frequently asked questions and answers will be added at the moment. Customizable FAQ content coming soon!</p>
 </div>
