--- a/ShouldReadMe/public/javascripts/templates/dashboard/baseDashboard.hbs
+++ b/ShouldReadMe/public/javascripts/templates/dashboard/baseDashboard.hbs
@@ -39,8 +39,8 @@
         <!-- preview section -->
         <div class="preview-section col-md-6">
             <div class="edit-panel"> </div>
-            <div class="faq-panel"> </div>
-            <div class="quiz-panel"> </div>
+            <div class="faq-panel hide"> </div>
+            <div class="quiz-panel hide"> </div>
         </div><!-- END preview section-->
         
         <!-- tips section -->
