--- a/ShouldReadMe/public/javascripts/templates/dashboard/editPanelComponents/printItem.hbs
+++ b/ShouldReadMe/public/javascripts/templates/dashboard/editPanelComponents/printItem.hbs
@@ -1,5 +1,4 @@
-<!-- example -->
-<div class="preview-item" id="{{id}}">
+<div class="preview-item" id="{{icon_id}}">
     <div class="icon-colors">
         <ul>
             <li class="white-bgk" id="white"></li>
@@ -11,4 +10,4 @@
     <div class="preview-icon-border"><img src="{{file_name}}" class="preview-icon">
     </div>
     <input type="text" name="user_defined_descr" placeholder="Short description">
-</div><!-- END example -->
+</div>
