colors on the items

--- a/ShouldReadMe/public/javascripts/templates/dashboard/baseDashboard.hbs
+++ b/ShouldReadMe/public/javascripts/templates/dashboard/baseDashboard.hbs
@@ -48,4 +48,7 @@
             <div class="tips-section"> </div>
         </div><!-- END tips section-->
     </div>
+    <div> 
+        <button class="go-to-preview button" type="submit">Preview</button>
+    </div>
 </div>
