added endpoint on API

--- a/ShouldReadMe/public/javascripts/templates/dashboard/editPanelComponents/printItem.hbs
+++ b/ShouldReadMe/public/javascripts/templates/dashboard/editPanelComponents/printItem.hbs
@@ -9,5 +9,5 @@
     </div>
     <div class="preview-icon-border"><img src="{{file_name}}" class="preview-icon">
     </div>
-    <input type="text" name="user_defined_descr" placeholder="Short description">
+    <input type="text" class="user_defined_descr" name="user_defined_descr" placeholder="Short description">
 </div>
