--- a/ShouldReadMe/public/css/style.css
+++ b/ShouldReadMe/public/css/style.css
@@ -168,7 +168,7 @@ a:hover, a:active, a:focus{
 	padding-left: 77px;
 }
 .instructions h3:after{
-	content: url("images/instructions2.png");
+	content: url("/images/instructions2.png");
 	height: 10px;
 	width: auto;
 	zoom: 0.55;
@@ -353,6 +353,9 @@ h3{
 
 .preview-container{
 	padding: 0 15px;
+}
+.preview-item div{
+	floating : left;
 }
 
 .preview-section,
