--- a/ShouldReadMe/views/get_started.tt
+++ b/ShouldReadMe/views/get_started.tt
@@ -4,10 +4,8 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <img class="small-logo" src="/images/ourlogopng.png">
                     <ul class="main-menu-list nav navbar-nav">
-                        <li><a href="#coming-soon"> Sign in </a></li>
-                        <li><a href="#"> Get started </a></li>
-                        <li><a href="#coming-soon"> Coming soon </a></li>
-                        <li><a href="#"><img class="help-icon" src="/images/help.png"></a></li>
+                        <li><a href="/"> Home </a></li>
+                        <li><a href="/signout"> Sign out </a></li>
                     </ul>
                 </div>
             </div>
