--- a/ShouldReadMe/public/javascripts/templates/dashboard/baseDashboard.hbs
+++ b/ShouldReadMe/public/javascripts/templates/dashboard/baseDashboard.hbs
@@ -1,17 +1,16 @@
-<nav class="menu navbar-fixed-top navbar navbar-inverse" role="navigation">
-    <div class="container-fluid">
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <img class="small-logo" src="/images/ourlogopng.png">
-            <ul class="main-menu-list nav navbar-nav">
-                <li><a href="#coming-soon"> Sign in </a></li>
-                <li><a href="#"> Get started </a></li>
-                <li><a href="#coming-soon"> Coming soon </a></li>
-                <li><a href="#"><img class="help-icon" src="/images/help.png"></a></li>
-            </ul>
-        </div>
-    </div>
-</nav> <!-- END  menu section -->
+ <img class="cover">
+        <nav class="main-menu navbar-fixed-top navbar" role="navigation">
+            <div class="container-fluid">
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <img class="small-logo" src="/images/logo.png">
+                    <ul class="main-menu-list nav navbar-nav">
+                        <li><a href="/"> Home </a></li>
+                        <li><a href="/signout"> Sign out </a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav> <!-- END  menu section -->
 
 <div class="container-fluid editor-container">
     <!-- instructions -->
