--- a/ShouldReadMe/views/get_started.tt
+++ b/ShouldReadMe/views/get_started.tt
@@ -1,8 +1,9 @@
-<nav class="menu navbar-fixed-top navbar navbar-inverse" role="navigation">
+ <img class="cover">
+        <nav class="main-menu navbar-fixed-top navbar" role="navigation">
             <div class="container-fluid">
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <img class="small-logo" src="/images/ourlogopng.png">
+                    <img class="small-logo" src="/images/logo.png">
                     <ul class="main-menu-list nav navbar-nav">
                         <li><a href="/"> Home </a></li>
                         <li><a href="/signout"> Sign out </a></li>
