--- a/ShouldReadMe/public/javascripts/templates/dashboard/baseDashboard.hbs
+++ b/ShouldReadMe/public/javascripts/templates/dashboard/baseDashboard.hbs
@@ -14,8 +14,8 @@
 
 <div class="container-fluid editor-container">
     <!-- instructions -->
-    <div class="instructions">
-        <h3>How to use it</h3>
+    <div class="instructions"> 
+        <h3>INSTRUCTIONS</h3>
         <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
         </p>
     </div><!-- END instructions -->
