--- a/ShouldReadMe/public/css/style.css
+++ b/ShouldReadMe/public/css/style.css
@@ -1,8 +1,3 @@
-/*rosu: #e8221c #747374*/ 
-/*crem: #eadfd4*/
-/*turcoaz: #30D683*/
-/*dark-grey: #333333*/
-
 
 body{
 	background-color: #f8fafb;
@@ -18,10 +13,19 @@ body{
     margin-right:-15px;
 }
 
+.starting-methods h2{
+	color: #1ebdbe;
+}
+
+.starting-methods{
+	width:1200px;
+	margin:0 auto;
+}
+
 .text-center h4,
 .text-center h3{
 	width:40%;
-	margin:70px auto;
+	margin:60px auto;
 }
 
 .header-text{
@@ -30,6 +34,16 @@ body{
 }
 .our-solution row{
 	margin:0px;
+}
+
+.btn-info{
+	background-color: #1ebdbe;
+}
+
+.get-started button{
+	height:60px;
+	margin:50px 100px;
+	width:250px;
 }
 
 .solution-container{
@@ -48,7 +62,7 @@ body{
 }
 
 .solution-item h4{
-	width:80%;
+	width:90%;
 	height:30px;
 	margin:20px auto;
 }
@@ -56,6 +70,10 @@ body{
 .solution-item p{
 	width:85%;
 	margin:20px auto;
+}
+
+.get-started h2{
+	margin:60px auto;
 }
 
 .hr-left, .hr-right{
@@ -88,13 +106,22 @@ body{
 	color: #747374;
 }
 
+.submit-option h3{
+	padding-bottom: 20px;
+	margin-bottom: 20px;
+	border-bottom: 7px #1ebdbe solid; 
+}
+
 h1, h2{
 	color: #747374;
 	text-align: center;
 
 }
 
-a{
+
+
+.main-container a,
+.editor-container a:hover{
 	color: #98a5a6;
 	background-color: none;
 }
@@ -106,13 +133,35 @@ a{
 	background-color: none;
 }
 
-a:hover, a:active, a:focus{
+.main-container a:hover, 
+.main-container  a:active, 
+.main-container  a:focus,
+.editor-container a{
 	color: #747374;
 	background-color: none!important;
 }
 
+.editor-container h1{
+	margin:60px auto;
+}
+
 .details h2{
 	text-align: left;
+}
+
+.details h3{
+	margin:30px auto;
+	padding-left:15px;
+}
+
+.details {
+	color: #747374;
+}
+
+.details button{
+	height:60px;
+	padding:0 20px;
+	margin-bottom: 50px;
 }
 
 .match1{
@@ -161,7 +210,7 @@ a:hover, a:active, a:focus{
 }
 
 .instructions h3{
-	color: #e8221c;
+	color: #747374;
 	padding: 30px 0;
 	margin-top: 10px;
 	font-style: bold;
@@ -174,15 +223,11 @@ a:hover, a:active, a:focus{
 	zoom: 0.55;
 	position: absolute;
 	left: 55px;
-	top: 195px;
+	top: 185px;
 }
 
 .instructions p{
 	padding-bottom: 20px;
-}
-
-a{
-
 }
 
 .starting-options .col-md-4{
@@ -229,8 +274,6 @@ a{
 
 .small-logo{
 	float:left;
-	/*zoom: 0.5;
-	margin-top: -20px;*/
 }
 
 .help-icon{
@@ -292,9 +335,9 @@ a{
 	color:lightgray;
 }
 
-.details-option{
+.details-option{/*
 	border-left: 1px solid lightgray;
-	border-right: 1px solid lightgray;
+	border-right: 1px solid lightgray;*/
 	padding:0 15px;
 }
 
@@ -354,34 +397,28 @@ h3{
 .preview-container{
 	padding: 0 15px;
 }
-.preview-item div{
-	floating : left;
+
+.preview-content,
+.icons-content,
+.faq-content,
+.quiz-content,
+.tips-content{
+	border: 1px solid lightgray;
+	display: block;
+	overflow:hidden;
+	margin:0;
 }
 
-.preview-section,
-.icons-subsection,
-.faq-section,
-.quiz-section,
-.tips-section{
-	border: 1px solid lightgray;
-	-moz-box-shadow:    1px 1px 2px 3px #ccc;
-    -webkit-box-shadow: 1px 1px 2px 3px #ccc;
-    box-shadow: 1px 1px 2px 3px #ccc;
-	box-sizing: border-box;
-}
-/*rosu: #e8221c*/
-/*crem: #eadfd4*/
-/*turcoaz: #30D683*/
-/*dark-grey: #333333*/
 .preview-section h3,
 .icons-subsection h3,
-.faq-head,
-.quiz-head,
-.tips-section h3{
-	color:#eadfd4;
-	background-color: #333;
+.tips-section h3,
+.faq-section .row,
+.quiz-section .row{
+	color:#747374;
+	border-bottom:7px solid #1ebdbe;
 	height:50px;
 	padding:10px;
+	margin-bottom: 0;
 }
 
 .tips-section{
@@ -554,12 +591,4 @@ h3{
 .color-text{
 	color:#50504e;
 }
-/*
-primul background menu f8 fa fb
-scrisu default aka mai deschis 98 a5 a6
-scris inchis 74 73 74
-turcoaz 1e bd be
-fundal alb..
-scris paragraf 50 50 4e
-titlu 77 75 76
-*/
+
