--- a/ShouldReadMe/public/javascripts/templates/dashboard/icons.hbs
+++ b/ShouldReadMe/public/javascripts/templates/dashboard/icons.hbs
@@ -1,6 +1,8 @@
 <h3>Icons</h3>
+<div class="icons-content s">
 {{#each sidebarIcons}}
     <div class="icon-container">
         <img src="{{file_name}}" class="default-icon" id="{{id}}" title="{{title}}">
     </div>
 {{/each}}
+</div>
