--- a/ShouldReadMe/public/javascripts/templates/dashboard/baseDashboard.hbs
+++ b/ShouldReadMe/public/javascripts/templates/dashboard/baseDashboard.hbs
@@ -1,4 +1,3 @@
- <img class="cover">
         <nav class="main-menu navbar-fixed-top navbar" role="navigation">
             <div class="container-fluid">
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -48,6 +47,6 @@
         </div><!-- END tips section-->
     </div>
     <div> 
-        <button class="go-to-preview button" type="submit">Preview</button>
+        <button class="go-to-preview button btn btn-info" type="submit">Preview</button>
     </div>
 </div>
