--- a/ShouldReadMe/views/launch.tt
+++ b/ShouldReadMe/views/launch.tt
@@ -157,6 +157,8 @@
                                 </div>
                             </div>
                         </div>
+                        <p>Password must have at least 6 characters</p>
+                        <p>All fields are mandatory</p>
                         
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal" onclick="window.location.href='#'">Close</button>
@@ -183,6 +185,7 @@
                         </div>
                         <div class="form-group">
                             <input type="password" name="password" id="password" class="form-control input-sm" placeholder="Password">
+                            
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal" onclick="window.location.href='#'">Close</button>
