--- a/ShouldReadMe/public/javascripts/templates/dashboard/baseDashboard.hbs
+++ b/ShouldReadMe/public/javascripts/templates/dashboard/baseDashboard.hbs
@@ -15,8 +15,15 @@
     <!-- instructions -->
     <div class="instructions"> 
         <h3>INSTRUCTIONS</h3>
-        <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
-        </p>
+        <div>
+            <h5>The editor contains 3 main sections: </h5>
+            <p>       - on the left side of the screen is a section with items that you can add to your Terms and Conditions (icons, FAQs and quizes)</p>
+            <p>       - a preview section on page center</p>
+            <p>       - a tips section on page center, that shows tips in accordance with your actions</p> 
+            <p>To select or deselect an icon, click it in the icons left menu</p>
+            <p>To add a frequently asked questions(FAQs) click the ON/OFF switch next to that option</p>
+            <p>When you`re done, click preview and than save your link</p>
+        </div>
     </div><!-- END instructions -->
     <!-- grouped content -->
     <div class="grouped-content row">
