--- a/ShouldReadMe/public/css/style.css
+++ b/ShouldReadMe/public/css/style.css
@@ -227,7 +227,7 @@ h1, h2{
 }
 
 .instructions p{
-	padding-bottom: 20px;
+	/*padding-bottom: 20px;*/
 }
 
 .starting-options .col-md-4{
@@ -518,7 +518,7 @@ h3{
 }
 
 .go-to-preview{
-    margin:20px auto;
+    margin-left:50%;
 }
 
 .faq-head, .quiz-head{
