--- a/ShouldReadMe/public/javascripts/templates/dashboard/baseDashboard.hbs
+++ b/ShouldReadMe/public/javascripts/templates/dashboard/baseDashboard.hbs
@@ -22,6 +22,7 @@
             <p>       - a tips section on page center, that shows tips in accordance with your actions</p> 
             <p>To select or deselect an icon, click it in the icons left menu</p>
             <p>To add a frequently asked questions(FAQs) click the ON/OFF switch next to that option</p>
+            <p>In the prieview section you can modify the background color of the icon and add a short descriprion</p>
             <p>When you`re done, click preview and than save your link</p>
         </div>
     </div><!-- END instructions -->
